=========
Changelog
=========

1.0.5 (unreleased)
==================

- Nothing changed yet.


1.0.4 (2015-03-31)
==================

- A new event handling system that allows intercepting and responding
  to events from components. Currently supports "before-update".

- Supplement supervisor programs with 'deployment' mode parameter
  to support 'cold' deployments that shut down programs before 
  any updates get deployed without causing superfluous cycles.


1.0.3 (2015-03-18)
==================

- Fix unicode encoding/decoding in File handling. See #14944.

- Remove remnant of better error output that got deferred to the 1.1
  branch that breaks reporting any conversion errors at all.

1.0.2 (2015-02-27)
==================

- Fix a bundle shipping issue: incorrect language settings caused us to
  incorrectly parse the list of heads on the remote side.


1.0.1 (2015-02-26)
==================

- Add virtualenv metadata for Python 2.4
- Keep trailing newlines when rendering templates


1.0 (2015-02-10)
================

- Add 'connect_method = vagrant' to the environment if you want to deploy
  into vagrant and use the 'vagrant ssh' invocation.

- Update internal buildout, setuptools, and execnet versions.

- Add 'update_method = rsync' to provide a simple, non-VCS specific way
  of shipping batou definitions to the remote side. This does not perform
  any conflict resolution and is mainly intended for use with vagrant.

- Supervisor: Assert that a Program should get to state "RUNNING" within
  ``startsecs`` after restarting, instead of only waiting for ``startsecs``.


1.0b33 (2015-01-28)
===================

- Fix bug in git Clone: Directly after cloning there is nothing to merge,
  so don't attempt to.


1.0b32 (2015-01-22)
===================

- Fix custom MySQL admin user when executing SQL statements.


1.0b31 (2015-01-16)
===================

- Rename a variable in ServiceCheck that conflicted with NRPEService and
  prevented custom naming of NRPE checks.

