@@ -5,7 +5,8 @@ Changelog
 1.0.5 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Fix unicode accident: shells with ASCII only failed to run the 
+  supervisor cold deployment log message.
 
 
 1.0.4 (2015-03-31)
